# python-project-lvl1

./: Makefile  README.md  pyproject.toml
.github/workflows/: superlinter.yml
brain_games/: __init__.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
brain_games/scripts/: brain_games.py
