[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["MAX L <Maximum00214@yandex.ru>"]

[tool.poetry.dependencies]
python = ""

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

packages = [
  { include = "brain_games" },
]