[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["MAX L <Maximum00214@yandex.ru>"]
packages = [
  { include = "Brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "Brain_games.scripts.brain_games:main"
brain-even = "Brain_games.brain_even:main"
brain-calc = "Brain_games.brain_calc:main"
